PER-132 Fixed the page stretch/shift bug related to opening a dialog box. The offending code was a width setter applied to the html element in the global stylesheet. I don't completely understand why it was causing the issue, but I adjusted the code within the stylesheet to accomodate the removed setting, which shouldn't be noticable in the end.
styles.css : Removed the width setter applied to the html element. I don't even know why it was there to begin with.

question.service.ts : Removed an embedded width setter in the dialog popup.

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,6 @@ html{
   margin: 10px auto;
   background-color: #2d2d2d;
   min-width: 750px;
-  width: 70%;
 }
 body {
   margin: auto;
@@ -35,9 +34,8 @@ body {
   border-radius: 5px;
   background-color: #f0f0f0;
   margin-bottom: 10px;
-
-  /* STYLES APPLIED WHILE DIALOG BOX IS BROKEN */
-  max-width: 1250px;
+  min-width: 850px;
+  width: 70%;
 }
 
 /* Adjusting the top radius values to make page radius rounded. */
